--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>This is My Page</h1>
 <p>I hope you will like this webpage.</p>
 <p>After initialisation this is writern.</p>
+<p>This is the 3rd change in line.</p>
 </body>
 </html>
