--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>This is My Page</h1>
 <p>I hope you will like this webpage.</p>
 <p>After initialisation this is writern.</p>
-<p>This is the 3rd change in line.</p>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
 </body>
 </html>
