--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <h1>This is My Page</h1>
 <p>I hope you will like this webpage.</p>
 <p>After initialisation this is writern.</p>
-<p>This is the first error.</p>
-<p>This is the second error.</p>
+<p>This is error that is solved.</p>
 </body>
 </html>
