All the changes are done. Changed in error fix file and index.html file

--- a/error-fix.html
+++ b/error-fix.html
@@ -2,6 +2,6 @@
 <title>Error Page</title>
 <body>
 <h1>Error Page</h1>
-<p>There is an error in line 8.</p>
+<p>All the error are solved.</p>
 </body>
 </html>
