--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <p>I hope you will like this webpage.</p>
 <p>After initialisation this is writern.</p>
 <p>This is error that is solved.</p>
-<button>Get More...</button>
+<button>Submit</button>
 </body>
 </html>
